--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,10 +2,13 @@
 <resources>
 
     <string name="app_name">Finance</string>
-    <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="incomeText">Income</string>
     <string name="expenseText">Expense</string>
     <string name="reportText">Report</string>
+    <string name="incomeHeading">Income</string>
+    <string name="addIncome_btn_text">Add</string>
+    <string name="expenseHeading">Expense</string>
+    <string name="addExpense_btn_text">Add</string>
 
 </resources>
